--- a/src/main/java/com/napier/sem/docker-compose.yml
+++ b/src/main/java/com/napier/sem/docker-compose.yml
@@ -2,10 +2,10 @@ version: '3'
 services:
   # Application Dockerfile is in same folder which is .
   app:
-    build: .
+    build: ../../../../../..
 
   # db is is db folder
   db:
-    build: db/.
+    build: ../../../../../../db
     command: --default-authentication-plugin=mysql_native_password
     restart: always
