--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
 name: A workflow for my Hello World App
-on: push
-
+on:
+  push:
+    branches:
+      - master
+      - develop
 jobs:
   UnitTests:
     name: Unit Tests
@@ -31,15 +34,22 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
-      - name: Integration Tests
+      - name: Integration Tests and CodeCov
         run: |
           docker build -t database ./db 
           docker run --name employees -dp 33060:3306 database
-          mvn -Dtest=com.napier.sem.AppIntegrationTest test
+          mvn -Dtest=com.napier.sem.AppIntegrationTest test          
           docker stop employees
           docker rm employees
-          docker image rm database                    
-
+          docker image rm database
+      - name: CodeCov
+        uses: codecov/codecov-action@v4.0.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }} # now required for public repos too
+          directory: ./target/site/jacoco
+          flags: Integration Tests # optional
+          verbose: true # optional (default = false)
+          slug: pmountcastle1/sem
   build:
     name: Build and Start Using docker-compose
     runs-on: ubuntu-20.04
